[tool.poetry]
name = "repl_python3_WeatherMK2"
version = "0.1.0"
description = ""
authors = ["coffeenated <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
xintool = "^0.0.7"
simplejson = "^3.17.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
